# investment

./: main.py  pyproject.toml
app/: runners.py
app/upbit/: client.py  errors.py
app/upbit/resources/: accounts.py  orders.py
src/: config.yaml
src/app/: __init__.py  config.py  runners.py  types.py
src/app/event/: __init__.py  event.py
src/app/service/executor/: __init__.py  api.py
src/app/service/market/: __init__.py  api.py  data.py  ohlcv.py  validated_tickers.py
src/app/service/sentiment/: __init__.py  api.py  artifact.py
src/app/service/strategy/: __init__.py  api.py  artifact.py
src/app/service/technical/: __init__.py  api.py  artifact.py  sma.py  volatile.py
src/base/: __init__.py  http_client.py  model.py  types.py
src/cli/: main.py
src/client/: __init__.py
src/client/alternative/: __init__.py  client.py  types.py
src/client/alternative/resources/: __init__.py  fng.py
src/client/upbit/: __init__.py  client.py  types.py  utils.py
src/client/upbit/resources/: __init__.py  accounts.py  candles.py  market.py  orders.py  ticker.py
src/upbit/: client.py  types.py
src/upbit/resources/: __init__.py  accounts.py  base.py  market.py  orders.py  ticker.py
tests/: test_alt.py  test_upbit.py
